--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend for Telegram MiniApp with Netizen Quizzes",
   "main": "index.js",
   "scripts": {
-  "dev": "nodemon index.js"
+  "start": "node index.js"
 },
   "repository": {
     "type": "git",
