--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Backend for Telegram MiniApp with Netizen Quizzes",
   "main": "index.js",
   "scripts": {
-  "start": "node index.js"
-},
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/egorpopov-bit/netizenquiz-miniapp-backend.git"
@@ -22,7 +23,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
-    "pg": "^8.14.1"
+    "pg": "^8.14.1",
+    "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
